--- a/test/_config.yml
+++ b/test/_config.yml
@@ -89,7 +89,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "heo jin wook"
   avatar           : "/assets/images/bio-photo.jpg"
   bio              : "I am an **amazing** person."
   location         : "Somewhere"
