--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "heo jin wook"
+  name             : "heo jin wook3434334"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an **amazing** person."
   location         : "Somewhere"
